[2020/2/13] Mostly finished created a new realm, for new players.
[2020/2/10] Added huge cavern ambiance.
[2020/2/9] Finally implemented reward (cloaking) for beating the Nether Challenge!
[2020/2/9] More sounds for when player dies.
[2020/2/9] Updated prospector texture to something less ugly. Updated a few other item textures, too.
[2020/2/9] Use better-looking sprite for the stamina HUD indicator.
[2020/2/9] Differentiate between different kinds of meat with new meat textures.
[2020/2/7] Updated recipe for the locked armor stand.
[2020/2/7] Added more cave waterdrop sounds.
[2020/2/7] The chat-alert-sound now changes volume based on player's AFK status. Louder when AFK, quieter when not AFK.
[2020/2/7] Added an option to turn the chat-alert-sound off, in the chat-filter formspec accessed from the Key.
[2020/2/7] Replaced the chat-alert-sound with something that sounds better, less annoying.
[2020/2/7] Reduced volume on all the footstep sounds. They seemed too loud compared to the rest of the ambiance.
[2020/2/6] Added an eerie sound for obsidian gateways.
[2020/2/6] Added a soft, perpetual wind sound to the surfaces of the Overworld, Channelwood, and Jarkati.
[2020/2/6] Edited some sounds to remove non-zero-energy starts (which can cause clicks and pops).
[2020/2/6] Redesigned ambiance system for better realism w.r.t. bird/insect sounds using a technique involving entities. Unfortunately, this tecnique cannot be backwards-applied to existing trees, etc. So if you want the bird/insect sounds back, you'll need to cut down and replant your trees. The upside is that these sounds no longer play in the open wastes, where there are no trees ....
[2020/2/5] Added GUI pageflip and button-press sounds.
[2020/2/5] Added a whole bunch more doors. Adjusted some recipes.
[2020/2/5] Use a better, more dusty-looking formspec background everywhere, instead of the boring builtin one.
[2020/2/5] Use a real character preview image in the 3D armor formspec.